# ensimag-video

C/: CMakeLists.txt
C++/: CMakeLists.txt
C++/src/: ensitheora.cc  ensivideo.hpp  ensivorbis.cc  oggstream.cc  oggstream.hpp  stream_common.cc  synchro.cc
C/src/: ensitheora.c  ensitheora.h  ensivideo.c  ensivorbis.c  synchro.c
